working on filter

--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,2 +1,5 @@
 <h1>Students#new</h1>
+<% id = params[:student][:tutor_id] %>
+<% raise id.inspect %>
+
 <p>Find me in app/views/students/new.html.erb</p>
