--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Students#index</h1>
-
+<%= params.inspect %>
 <%= form_tag students_path, :method => 'get' do %>
   <%= text_field_tag :search, params[:search] %>
   <%= collection_select(:student, :tutor_id, Tutor.all, :id, :name, prompt: true) %>
